add crud aos articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,12 +7,12 @@
   <hr />
   <div class="pull-right">
     <p class="center">
-      Created by:
+      Criado por
     </p>
     <p>
       <small><%= @article.user.username %></small>
       <div class="pull-right">
-        <%= time_ago_in_words(@article.created_at) %> atras
+        <%= time_ago_in_words(@article.created_at) %> 
       </div>
     </p>
   </div>
