--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,27 @@
-<h1 align="center">Nome do Artigo: <%= @article.name.capitalize %></h1>
+<%= render 'shared/page_title', title: "Mostrar o article" %>
 
 <div class="well col-md-8 col-md-offset-2">
-  <h4 class="center description"><strong>Description: </strong></h4>
+  <h4 class="center description"><strong>descrição </strong></h4>
   <hr />
-  <%= @article.description %>
+  <%= simple_format(@article.description) %>
   <hr />
   <div class="pull-right">
     <p class="center">
-      Criado por
+      <em>Criado por:</em>
     </p>
-    <p>
-      <small><%= @article.user.username %></small>
-      <div class="pull-right">
-        <%= time_ago_in_words(@article.created_at) %> 
-      </div>
+    <p class="center">
+      <%= link_to gravatar_for(@article.user), article_path %>
+    </p>
+    <p class="center">
+      <small><%= @article.user.username.capitalize %></small>
+      <div class="pull-right"><%= time_ago_in_words(@article.created_at) %> atras</div>
     </p>
   </div>
 </div>
+
+<div class="recipe-actions">
+  <%= link_to "editar o artigo", edit_article_path(@article), class: 'btn btn-xs btn-warning' %>
+  <%= link_to "deletar o arquivo", article_path(@article), method: :delete, ata: { confirm: "Are you sure you want to delete?" }, class: "btn btn-xs btn-danger" %>
+</div>  
+
+<%= link_to "voltar para artigos", articles_path, class: "btn btn-xs btn-primary" %>
