--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,3 @@
-<%= render 'shared/page_title', title: "showing all recipes" %>
-<% @articles.each do |article| %>
-  <div class="row">
-    <div class="col-md-2">
-      <section class="chef_info center">
-        <%= gravatar_for(article.user, size: 120) %>
-      </section>
-    </div>
-    <div class="col-md-8 well">
-      <h4><%= link_to article.name, article_path(article) %></h4>
-      <p><%= truncate(article.description, length: 150) %></p>
-      <p>
-        <span class="quiet"><small>Created 
+<%= render 'shared/page_title', title: "showing all articles"%>
 
-            <%= time_ago_in_words(article.created_at) %> 
-
-           atras</small></span>
-      </p> 
-    </div>
-  </div>
-<% end %>
+<%= render 'article', obj: @articles %>
