--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <li><%= link_to "Users", users_path %></li>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Features</a>
@@ -27,3 +27,4 @@
     </ul>
   </div>
 </nav>
+
