--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-          <%= f.submit "Create my account", class: "btn btn-primary btn-lg btn-xlarge" %>
+          <%= f.submit(@user.new_record? ? "Criar minha conta" : "atualizar minha conta", class: "btn btn-primary btn-lg btn-xlarge") %>
         </div>
       </div>
     <% end %>
