--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "Sign up for the application" %>
+<%= render 'shared/page_title', title: "faça seu login" %>
 
-<%= render 'form' %>
+<%= render 'form'%>
