--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
-<%= render 'shared/page_title', title: "user #{@user.username}'s profile" %>
+<%= render 'shared/page_title', title: "#{@user.username} Perfil" %>
+
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
     <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
 
-<h4 align="center"><%= @user.username %>'s recipes</h4>
-<%= render 'articles/article', obj: @user.articles %>
+<h4 align="center"><%= @user.username%></h4>
+<%= render 'articles/article', obj: @user.articles%>
