add profile, admin profile

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 
 <div class="jumbotron center">
-  <h1>Welcome to MyRecipes</h1>
+  <h1>Bem vindo lenda</h1>
   <p><%= link_to "Sign up for the app", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %></p>
-  <p><%= link_to "Entrar ou cadastrar", "#", class: "btn btn-danger btn-lg"%></p>
 </div>
 
 <div class="row">
