--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,27 +1,30 @@
-<%= render 'shared/page_title', title: "Mostrar o article" %>
+<%= render 'shared/page_title', title: @article.name %>
 
-<div class="well col-md-8 col-md-offset-2">
-  <h4 class="center description"><strong>descrição </strong></h4>
-  <hr />
-  <%= simple_format(@article.description) %>
-  <hr />
-  <div class="pull-right">
-    <p class="center">
-      <em>Criado por:</em>
-    </p>
-    <p class="center">
-      <%= link_to gravatar_for(@article.user), article_path %>
-    </p>
-    <p class="center">
-      <small><%= @article.user.username.capitalize %></small>
-      <div class="pull-right"><%= time_ago_in_words(@article.created_at) %> atras</div>
-    </p>
+  <div class="well col-md-8 col-md-offset-2">
+    <h4 class="center description"><strong>Steps: </strong></h4>
+    <hr />
+    <%= simple_format(@article.description) %>
+    <hr />
+    <div class="pull-right">
+      <p class="center">
+        <em>Created by:</em>
+      </p>
+      <p class="center">
+        <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
+      </p>
+      <p class="center">
+        <small><%= @article.user.username.capitalize %></small>
+        <div class="pull-right"><%= time_ago_in_words(@article.created_at) %> ago</div>
+      </p>
+    </div>
+    <div class="article-actions">
+      <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
+        <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-warning" %>
+        <%= link_to "Delete this article", article_path(@article), method: :delete,
+                                          data: { confirm: "Are you sure you want to delete this article?" },
+                                          class: "btn btn-xs btn-danger" %>
+      <% end %>                                  
+      <%= link_to "Return to articles listing", articles_path, class: "btn btn-xs btn-primary" %>
+    </div>
   </div>
-</div>
-
-<div class="recipe-actions">
-  <%= link_to "editar o artigo", edit_article_path(@article), class: 'btn btn-xs btn-warning' %>
-  <%= link_to "deletar o arquivo", article_path(@article), method: :delete, ata: { confirm: "Are you sure you want to delete?" }, class: "btn btn-xs btn-danger" %>
-</div>  
-
-<%= link_to "voltar para artigos", articles_path, class: "btn btn-xs btn-primary" %>
+  
