--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,18 @@
-<%= render 'shared/page_title', title: "#{@user.username} Perfil" %>
-
+<%= render 'shared/page_title', title: "user #{@user.username}'s profile" %>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
     <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
-
-<h4 align="center"><%= @user.username%></h4>
-<%= render 'articles/article', obj: @user.articles%>
+<% if @user.articles.count != 0 %>
+  <h4 align="center"><%= @user.username %>'s articles</h4>
+  <div align="center">
+    <%= will_paginate @user_articles %>
+  </div>
+  <%= render 'articles/article', obj: @user_articles %>
+  <div align="center">
+    <%= will_paginate @user_articles %>
+  </div>
+<% else %>
+  <h4 align="center">No articles yet!</h4>
+<% end %>
