--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,7 +9,7 @@
       <h4><%= link_to article.name, article_path(article) %></h4>
       <p><%= truncate(article.description, length: 150) %></p>
       <p>
-        <span class="quiet"><small>Created <%= time_ago_in_words(article.created_at) %> ago by <%= article.user.username.capitalize %>
+        <span class="quiet"><small>Created <%= time_ago_in_words(article.created_at) %> ago by <%= article.user.username.capitalize %><%= pluralize(article.comments.count, 'Comente') %></small></span>
       </p>
       <% if logged_in? && (current_user == article.user || current_user.admin?) %>
         <div class="article-actions">
