--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 <%= render 'shared/page_title', title: "Usuarios" %>
 
-<div align="center">
+<div align ="center">
   <% @users.each do |user| %>
     <ul class="listing">
       <div class="row">
-        <div class="well col-md-4 col-md-offset-4">
+        <div class="well col-lg-4 col-lg-4">
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
           <li class="chef-title"><%= link_to user.username.capitalize, user_path(user) %></li>
           <li><small><%= pluralize(user.articles.count, "Artigos") if user.articles %>
