--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,19 +1,20 @@
-
-<div class="jumbotron center img" >
-  <h1 style=" margin-top: 100px;"> Bem vindo Lenda </h1>
-  <p><%= link_to "Click para se entrar ou se inscrever", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %></p>
-  <p style=" margin-top: 50px;">
-    Um blog de League of Legends pode ser uma fonte valiosa de informações sobre o jogo, fornecendo análises, estratégias, dicas e notícias relacionadas ao universo de LoL. O blog pode incluir postagens sobre campeões específicos, atualizações do jogo, eventos importantes e torneios, bem como discussões sobre o estado atual do jogo e sua comunidade.
-    League of Legends é um dos jogos online mais populares do mundo, com milhões de jogadores ativos em todo o mundo. O jogo atrai uma grande comunidade de jogadores apaixonados que compartilham sua experiência e conhecimento do jogo por meio de blogs dedicados.
-  </p>
+<div class="img">
+  <div class="jumbotron center" >
+    <h1 style=" margin-top: 100px;"> Bem vindo Lenda </h1>
+    <p><%= link_to "Click para se entrar ou se inscrever", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %></p>
+    <p style=" margin-top: 50px;">
+      Um blog de League of Legends pode ser uma fonte valiosa de informações sobre o jogo, fornecendo análises, estratégias, dicas e notícias relacionadas ao universo de LoL. O blog pode incluir postagens sobre campeões específicos, atualizações do jogo, eventos importantes e torneios, bem como discussões sobre o estado atual do jogo e sua comunidade.
+      League of Legends é um dos jogos online mais populares do mundo, com milhões de jogadores ativos em todo o mundo. O jogo atrai uma grande comunidade de jogadores apaixonados que compartilham sua experiência e conhecimento do jogo por meio de blogs dedicados.
+    </p>
+  </div>
 </div>
 
-<div class="row" style="margin-top: 100px;">
+<div class="row" style="margin-top: 150px;">
   <div class="col-lg-4">
     <h2>Informação</h2>
     <p>Análises de campeões: Os jogadores de LoL são apaixonados por seus personagens favoritos, e um blog pode oferecer análises detalhadas sobre habilidades, itens recomendados, estratégias de jogo e sinergias com outros campeões. </p>
   </div>
-  <div class="col-lg-4">
+  <div class="col-lg-4 ">
     <h2>Noticias</h2>
     <p>Notícias e atualizações: Com a constante evolução do jogo, os blogs podem fornecer atualizações regulares sobre novos campeões, skins, atualizações de jogabilidade e eventos importantes. </p>
  </div>
