--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,11 +1,11 @@
 <% obj.each do |article| %>
   <div class="row">
     <div class="col-md-2">
-      <section class="user_info center">
+      <section class="user_info center" style="padding-top:20px;">
         <%= gravatar_for(article.user, size: 120) %>
       </section>
     </div>
-    <div class="col-md-8 well">
+    <div class="col-md-8 well"style="padding-top:30px;">
       <h4><%= link_to article.name, article_path(article) %></h4>
       <p><%= truncate(article.description, length: 150) %></p>
       <p>
