--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #192835;">
+<nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #192835; margin-bottom:10px;">
   <%= link_to "BunkerDasLendas", root_path, class: "navbar-brand", id: "logo" %>
 
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1 ">
@@ -6,7 +6,7 @@
         <li><%= link_to "Usuarios", users_path,{:style=>'color:#566573; 
                                                           text-decoration:none;
                                                           padding: 50px;
-                                                          margin-left:200px;' }%></li>
+                                                          margin-left:450px;' }%></li>
         <li><%= link_to "Artigos", articles_path, {:style=>'color:#566573; 
                                                           text-decoration:none;
                                                           padding-right: 50px;' } %></li>
