--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,48 +1,48 @@
 <%= render 'shared/errors', obj: @user %>
 
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12" style="padding-top:10px;">
     <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :username, "Choose Chefname" %>
+        <div class="control-label col-md-2" style="padding-bottom:10px;>
+          <%= f.label :username, "Nome da Lenda" %>
         </div>
         <div class="col-md-8">
           <%= f.text_field :username, class: "form-control", placeholder: "Enter your name", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-md-2">
+        <div class="control-label col-md-2" style="padding-top:10px;">
           <%= f.label :email %>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" style="padding-top:10px;">
           <%= f.email_field :email, class: "form-control", placeholder: "Enter your email" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-md-2">
+        <div class="control-label col-md-2" style="padding-top:10px;">
           <%= f.label :password %>
         </div>
-        <div class="col-md-8">
-          <%= f.password_field :password, class: "form-control", placeholder: "Choose a password" %>
+        <div class="col-md-8" style="padding-top:10px;">
+          <%= f.password_field :password, class: "form-control", placeholder: "Senha" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :password_confirmation, "Confirm Password" %>
+        <div class="control-label col-md-2" style="padding-top:10px;">
+          <%= f.label :password_confirmation, "Comfirme a senha" %>
         </div>
-        <div class="col-md-8">
-          <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirm password" %>
+        <div class="col-md-8" style="padding-top:10px;">
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder: "Confirme a senha" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
+        <div class="col-md-offset-2 col-md-10" style="padding-top:10px;">
           <%= f.submit(@user.new_record? ? "Criar minha conta" : "atualizar minha conta", class: "btn btn-primary btn-lg btn-xlarge") %>
         </div>
       </div>
     <% end %>
-    <div class="col-md-4 col-md-offset-4 colormatch">
-      [ <%= link_to "Cancel request and return to recipes listing", articles_path %> ]
+    <div class="col-md-4 col-md-offset-4 colormatch" style="padding-top:10px;">
+      [ <%= link_to "Voltar para a Lista de Artigos", articles_path %> ]
     </div>
   </div>
 </div>
