--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,17 @@
 <%= render 'shared/page_title', title: "Usuarios" %>
 
-<div align ="center">
+<div align="center">
   <% @users.each do |user| %>
     <ul class="listing">
       <div class="row">
-        <div class="well col-lg-4 col-lg-4">
+        <div class="well col-lg-4 col-lg-offset-4">
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
           <li class="chef-title"><%= link_to user.username.capitalize, user_path(user) %></li>
           <li><small><%= pluralize(user.articles.count, "Artigos") if user.articles %>
           <% if logged_in? and current_user.admin? && !user.admin %>
-            <li><%= link_to "Deletar o usuario", user_path(user), method: :delete%></li>
+            <li>
+              <%= link_to "Deletar o usuário", user_path(user), method: :delete,
+                      data: {confirm: "Tem certeza de que deseja excluir o usuário e todas as postagens associadas?"} %></li>
           <%end%>
             </small></li>
         </div>
