--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "faça seu cadastro" %>
+<%= render 'shared/page_title', title: "Cadastro" %>
 
 <%= render 'form'%>
