commit terminando o front

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "showing all articles"%>
+<%= render 'shared/page_title', title: "Artigos das Nossas lendas"%>
 
 <%= render 'article', obj: @articles %>
