--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,7 +21,7 @@
       </div>
       <div class="form-group">
         <div class="control-label col-md-2" style="padding-top:10px;">
-          <%= f.label :password %>
+          <%= f.label :password, "Crie uma Senha"%>
         </div>
         <div class="col-md-8" style="padding-top:10px;">
           <%= f.password_field :password, class: "form-control", placeholder: "Senha" %>
