--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -13,8 +13,9 @@
       </p>
       <% if logged_in? && (current_user == article.user || current_user.admin?) %>
         <div class="article-actions">
-          <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-warning" %>
-          <%= link_to "Delete this article", article_path(article), method: :delete,
+          <%= link_to "Editar", edit_article_path(article), class: "btn btn-xs btn-warning" %>
+          <%= link_to "Criar novo", new_article_path(article), class: "btn btn-xs btn-primary" %>
+          <%= link_to "Excluir", article_path(article), method: :delete,
                                         data: { confirm: "Are you sure you want to delete this article?" },
                                         class: "btn btn-xs btn-danger" %>
         </div>
