--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,60 +1,54 @@
 <%= render 'shared/page_title', title: @article.name %>
 
   <div class="well col-md-8 col-md-offset-2">
-    <h4 class="center description"><strong>Steps: </strong></h4>
-    <hr />
-    <%= simple_format(@article.description) %>
-    <hr />
-    <div class="pull-right">
+    <h4 class="center description" style="margin-left:500px;"><strong>Artigo: </strong></h4>
+          <div style="width:1000px; margin-left:150px;"><hr /></div>
+    <div style="width:800px; margin-left:250px;"><%= simple_format(@article.description)%></div>
+     <div style="width:1000px; margin-left:150px;"><hr /></div>
+    <div class="pull-right" style="margin-left:500px;" >
       <p class="center">
-        <em>Created by:</em>
+        <em>Criado por:</em>
       </p>
       <p class="center">
         <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
       </p>
-      <p class="center">
+      <p class="center" >
         <small><%= @article.user.username.capitalize %></small>
-        <div class="pull-right"><%= time_ago_in_words(@article.created_at) %> ago</div>
+        <div class="pull-right" style="margin-left:140px;"><%= time_ago_in_words(@article.created_at) %> ago</div>
       </p>
     </div>
     <div class="article-actions">
       <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-        <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-warning" %>
-        <%= link_to "Delete this article", article_path(@article), method: :delete,
+        <%= link_to "Editar", edit_article_path(@article), class: "btn btn-xs btn-warning" %>
+        <%= link_to "Excluir", article_path(@article), method: :delete,
                                           data: { confirm: "Are you sure you want to delete this article?" },
                                           class: "btn btn-xs btn-danger" %>
       <% end %>                                  
-      <%= link_to "Return to articles listing", articles_path, class: "btn btn-xs btn-primary" %>
+      <%= link_to "Voltar para Artigos", articles_path, class: "btn btn-xs btn-primary" %>
     </div>
   </div>
 
   <div class="row">
-  <div class="row col-md-8 col-md-offset-2">
-    <%= link_to like_article_path(@article, like: true), method: :post do %>
-      <i class="glyphicon glyphicon-thumbs-up"></i> 
-    <% end %>|| 
-    <%= link_to like_article_path(@article, like: false), method: :post do %>
-      <i class="glyphicon glyphicon-thumbs-down"></i>
-    <% end %> 
+  <div class="row col-md-8 col-md-offset-2"> 
   </div>
 </div>
 <% if logged_in? %>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h3>Comments: </h3>
+      <h3 style="padding-top:15px;">Comentarios: </h3>
       <hr />
       <%= form_for([@article, @comment], remote: true, :html => {class: "form-horizontal", role: "form"}) do |f| %>
         <div class="form-group">
           <div class="control-label col-md-2">
-            <%= f.label :description, "Comment" %>
+            <%= f.label :description, "Comentario" %>
           </div>
           <div class="col-md-8">
-            <%= f.text_area :description, rows: 8, class: "form-control", placeholder: "Enter Comment Here" %>
+            <%= f.text_area :description, rows: 8, class: "form-control", placeholder: "Faça um breve comentario sobre o artigo" %>
           </div>
         </div>
         <div class="form-group">
-          <div class="col-md-offset-2 col-md-10">
-            <%= f.submit "Submit Comment", class: "btn btn-primary btn-lg btn-xlarge" %>
+          <div class="col-md-offset-2 col-md-10" style="padding-bottom:5px;">
+            <%= f.submit "Enviar", class: "btn btn-primary btn-lg btn-xlarge" %>
           </div>
         </div>
       <% end %>
