--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
-<%= render 'shared/page_title', title: "user #{@user.username}'s profile" %>
+<%= render 'shared/page_title', title: "Perfil de #{@user.username}" %>
 <div class="row">
   <div class="col-md-4 col-md-offset-4 center">
     <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
 <% if @user.articles.count != 0 %>
-  <h4 align="center"><%= @user.username %>'s articles</h4>
+  <h4 align="center" style="padding:30px;">Artigos pela Lenda <%= @user.username %></h4>
   <%= render 'articles/article', obj: @user_articles %>
 <% else %>
   <h4 align="center">No articles yet!</h4>
