--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -18586,8 +18586,6 @@ textarea.form-control-lg {
   color: black;
 }
 
-
-
 .jumbotron h1 {
   text-align: center;
   margin-bottom: 30px;
@@ -18619,11 +18617,11 @@ btn-xlarge {
   color: #073B15;
 }
 
-.recipe-actions {
+.article-actions {
   padding-top: 5px;
 }
 
-.recipe-actions a{
+.article-actions a{
   color: #fff;
 }
 
