--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -18586,6 +18586,24 @@ textarea.form-control-lg {
   color: black;
 }
 
+.img2{
+  background-image: url("./illaoi.jpg");
+  width: 100;
+  height: 400px;
+  color: wheat;
+  margin-bottom: 100px;
+  text-align: justify;
+}
+
+.img3{
+  background-image: url("./ari.jpeg");
+  width: 100;
+  height: 400px;
+  color: wheat;
+  margin-bottom: 50px;
+  text-align: justify;
+}
+
 .jumbotron h1 {
   text-align: center;
   margin-bottom: 30px;
