--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: "create a new recipe" %>
+<%= render 'shared/page_title', title: "Criar novo Artigo" %>
 
 <% if @article.errors.any? %>
   <div class="row">
@@ -27,29 +27,29 @@
     <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
       <div class="form-group">
         <div class="control-label col-md-2">
-          <%= f.label :name %>
+          <%= f.label :name, "Nome" %>
         </div>
-        <div class="col-md-8">
-          <%= f.text_field :name, class: "form-control", placeholder: "Name of recipe", autofocus: true %>
+        <div class="col-md-8" style="padding-top:10px;">
+          <%= f.text_field :name, class: "form-control", placeholder: "Nome do artigo", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
-        <div class="control-label col-md-2">
-          <%= f.label :description %>
+        <div class="control-label col-md-2" style="padding-top:10px;">
+          <%= f.label :description, "Escreva Seu Artigo" %>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" style="padding-top:10px;">
           <%= f.text_area :description, rows: 10, class: "form-control", 
-                                    placeholder: "Enter steps to create recipe" %>
+                                    placeholder: "Escreva seu artigo aqui" %>
         </div>
       </div>
       <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-          <%= f.submit class: "btn btn-primary btn-lg btn-xlarge" %>
+        <div class="col-md-offset-2 col-md-10" style="padding-top:10px;">
+          <%= f.submit "Criar artigo", class: "btn btn-primary btn-lg btn-xlarge" %>
         </div>
       </div>
     <% end %>
-    <div class="col-md-4 col-md-offset-4 colormatch">
-      [ <%= link_to "Cancel request and return to recipes listing", articles_path %> ]
+    <div class="col-md-4 col-md-offset-4 colormatch" style="padding-top:10px;">
+      [ <%= link_to "Cancelar e ir para a Lista", articles_path %> ]
     </div>
   </div>
 </div>
