--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,7 +8,7 @@
           <%= f.label :username, "Nome da Lenda" %>
         </div>
         <div class="col-md-8">
-          <%= f.text_field :username, class: "form-control", placeholder: "Enter your name", autofocus: true %>
+          <%= f.text_field :username, class: "form-control", placeholder: "Digite seu nome", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
@@ -16,7 +16,7 @@
           <%= f.label :email %>
         </div>
         <div class="col-md-8" style="padding-top:10px;">
-          <%= f.email_field :email, class: "form-control", placeholder: "Enter your email" %>
+          <%= f.email_field :email, class: "form-control", placeholder: "Digite seu email" %>
         </div>
       </div>
       <div class="form-group">
