trocando js, concetando bug do excluir

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -6,12 +6,12 @@
       <div class="panel panel-danger">
         <div class="panel-heading">
           <h2 class="panel-title">
-            <%= pluralize(@recipe.errors.count, "error") %>
-            prohibited this <%= @recipe.class %> from being saved:
+            <%= pluralize(@article.errors.count, "error") %>
+            prohibited this <%= @article.class %> from being saved:
           </h2>
           <div class="panel-body">
             <ul>
-              <% @recipe.errors.full_messages.each do |msg| %>
+              <% @article.errors.full_messages.each do |msg| %>
                 <li><%= msg %></li>
               <% end %>
             </ul>
