--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,5 +8,5 @@
   <h4 align="center" style="padding:30px;">Artigos pela Lenda <%= @user.username %></h4>
   <%= render 'articles/article', obj: @user_articles %>
 <% else %>
-  <h4 align="center">Esta lenda não possui artigos aida</h4>
+  <h4 align="center">Esta lenda não possui artigos anida</h4>
 <% end %>
