--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -15,9 +15,7 @@
         <div class="article-actions">
           <%= link_to "Editar", edit_article_path(article), class: "btn btn-xs btn-warning" %>
           <%= link_to "Criar novo", new_article_path(article), class: "btn btn-xs btn-primary" %>
-          <%= link_to "Excluir", article_path(article), method: :delete,
-                                        data: { confirm: "Are you sure you want to delete this article?" },
-                                        class: "btn btn-xs btn-danger" %>
+          <%= link_to "Excluir", article_path(article), data: {turbo_method: :delete, confirm: "Are you sure you want to delete this article?" }, class: "btn btn-xs btn-danger" %>
         </div>
       <% end %>
     </div>
