--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,14 +21,13 @@
   <div class="col-lg-4 img4">
     <h2>Dicas</h2>
     <p>Dicas e truques: Os jogadores de LoL sempre estão procurando maneiras de melhorar seu desempenho no jogo, e um blog pode fornecer dicas úteis sobre como melhorar suas habilidades, estratégias e táticas para vencer partidas.</p>
-    
   </div>
 </div>
 
 <div class="row img3">
   <div class="col-lg-6">
-    <h2 style="padding-top:15px;">Sobre</h2>
-    <p style="width:800px; padding-top:20px;"> 
+    <h2 style="padding-top:15px; margin-left:600px;">Sobre</h2>
+    <p style="width:800px; padding-top:20px;margin-left:250px;"> 
         Neste blog, você encontrará informações atualizadas sobre o jogo, incluindo notícias sobre atualizações, torneios e eventos. Além disso, vamos compartilhar dicas e estratégias para ajudá-lo a melhorar sua jogabilidade, aprimorar suas habilidades e subir de elo no ranqueado.
         Também vamos abordar a comunidade de League of Legends, com entrevistas com jogadores profissionais, streamers e personalidades da cena de esports. Você terá a oportunidade de conhecer mais sobre as pessoas por trás dos avatares e descobrir como eles se tornaram parte da comunidade de League of Legends.
         E não para por aí! Vamos discutir as tendências, curiosidades e memes mais recentes da comunidade de League of Legends, para que você possa se manter atualizado e se divertir enquanto joga.
