--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,10 +20,12 @@
         <% if logged_in? %>
           <li class="dropdown">
             <a style="color:#566573; text-decoration:none; padding-right: 10px; margin-left:400px"href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.capitalize %> Perfil<%= " Admin" if current_user.admin? %><span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "View your profile", user_path(current_user) %></li>
-              <li><a href="#">Something else here</a></li>
+            <ul class="">
+              </li>
               <li role="separator" class="divider"></li>
+              <li style="margin-left:400px;"><%= link_to "Editar perfil", edit_user_path(current_user),{:style=>'color:#566573; 
+                                                          text-decoration:none;
+                                                          padding-right: 50px;' }  %></li>
             </ul>
             <ul style="margin-left:420px">
             <li><%= link_to "Log out", sessions_path, method: :delete %></li>
@@ -32,8 +34,9 @@
         <% else %>
           <li><%= link_to "Log in", login_path, {:style=>'color:#566573; 
                                                           text-decoration:none;
-                                                          padding-right: 50px;' }%></li>  
+                                                          padding-right: 50px;' }%></li> 
         <% end %>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
