--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,3 @@
-<%= render 'shared/page_title', title: "edite seu login" %>
+<%= render 'shared/page_title', title: "Edite seu Perfil" %>
 
 <%= render 'form'%>
